<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SifremiUnuttumActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etTcSifremiUnuttum"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:ems="10"
            android:hint="@string/et_tc_giris"
            android:inputType="numberDecimal"
            android:maxLength="11"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etHesapNoSifremiUnuttum"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/et_background"
            android:ems="10"
            android:hint="@string/et_hesapno_sifremi_unuttum"
            android:inputType="numberPassword"
            android:maxLength="20"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etYeniSifreSifremiUnuttum"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/et_background"
            android:ems="10"
            android:hint="@string/et_yenisifre_sifremi_unuttum"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:padding="15dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btSifreOnaylaSifremiUnuttum"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background"
            android:text="@string/bt_onayla_sifremi_unuttum"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:onClick="yeniSifreOnayla"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>