<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.YetkiliMainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@android:color/holo_red_light"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Hoş Geldiniz"
        app:titleTextColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sayın Yetkili"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginStart="20dp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <Button
            android:id="@+id/btHesapEkleYetkili"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/bt_hesap_ekle_YetkiliGiris"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="hesapEkle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/btHesapSilYetkili"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:text="@string/bt_hesap_sil_YetkiliGiris"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="hesapSil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btHesapEkleYetkili" />

        <Button
            android:id="@+id/btHesaplarıGosterYetkili"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:text="@string/bt_hesap_goster_YetkiliGiris"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="hesaplariGoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btHesapSilYetkili" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>